fixed spacing

--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ h1 {
 }
 
 p.bottombar {
+	clear: both;
 	text-align: left;
 	padding: 0 0.7em;
 	margin-top: 0;
@@ -68,6 +69,7 @@ ul {
 
 img {
 	opacity: 0.7;
+	margin-bottom: 1em;
 }
 
 a {
